# UMM

./: .gitignore  CMakeLists.txt  DataGenerator.cpp  NaiveMgard.cpp  README.md  addVar.cpp  addVarVector.cpp  convertToRectlinear.cpp  createSampleData.cpp  interp.cpp  resampleCompress.cpp  resampleCompressInterp.cpp  resampleCompressRect.cpp
ECR/: AdpG.cpp  AdpG.hpp  CMakeLists.txt  ErrorControlledResample.cpp  debug.py
cmake/: mgard-config.cmake
datasets/: sampleUmesh.vtk  sampleUmeshWithVar.vtk  sampleUmeshWithVarResample.vtk  sampleUnstructuedMeshSparse.vtk  sampleUnstructuedMeshSparseWithVar.vtk  sampleUnstructuedMeshSparseWithVarResample.vtk
installscripts/: settings.sh  summit_install.sh  ubuntu_install.sh
